--- a/_posts/2022-12-15-INMEDIA-跑會向學生派-香港加油-毛巾-遭校方沒收兼報警.html
+++ b/_posts/2022-12-15-INMEDIA-跑會向學生派-香港加油-毛巾-遭校方沒收兼報警.html
@@ -15,16 +15,16 @@ author: 獨媒報導
 <p>通告又指，由於該毛巾上的圖案可能存在法律風險，強烈建議學生不要使用或公開展出，並要求收回毛巾處理，又稱會向未獲受權的人士保留一切追究權利。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8RXX191C7M" title="IMG-20221027-WA0018"><img src="https://live.staticflickr.com/65535/52560856775_aa370056e5_b.jpg" width="576" alt="IMG-20221027-WA0018" /></a><br /><em>校方發出的通告（相片由受訪者提供）</em></p>
 <p><strong>無建議學生出賽用毛巾 向校長解釋未獲回應</strong></p>
-<p>向《獨媒》透露有關事件的Gary 為該校前長跑隊帶隊老師，他在2021年9月離職後，成立跑步會，與舊生練跑。他指，該條黑色毛巾是他送給學生的離職禮物，印有「香港加油」的字樣，字體內印有參加跑會的學生姓名及一些鼓勵字句。</p>
+<p>向《獨媒》透露有關事件的 Gary 為該校前長跑隊帶隊老師，他在2021年9月離職後，成立跑步會，與舊生練跑。他指，該條黑色毛巾是他送給學生的離職禮物，印有「香港加油」的字樣，字體內印有參加跑會的學生姓名及一些鼓勵字句。</p>
 <p>在今年10月27日，他向跑會學生派發毛巾，但同日校方獲悉事件後，立即召見約30名長跑隊學生及8位有份在校內派發毛巾的學生，指已報警處理，並要求他們填妥回條，把毛巾交回學校處理。Gary 表示，獲悉事件後，曾聯絡校長解釋，並附上與長跑隊學生的對話信息，強調自己沒有呼籲學生出賽時使用，反而著學生低調在家用使用，當作紀念品，但校長一直沒有回應。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4UH2YSCQdj" title="WhatsApp Image 2022-12-12 at 2.53.50 PM"><img src="https://live.staticflickr.com/65535/52560685074_4492be51b0_b.jpg" width="291" alt="WhatsApp Image 2022-12-12 at 2.53.50 PM" /></a><br /><em>Gary 向校長解釋未曾建議學生在比賽中使用（相片由受訪者提供）</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Ez8gZH8MJ0" title="IMG-20221203-WA0001_1"><img src="https://live.staticflickr.com/65535/52560678904_13ccb14179_b.jpg" width="509" alt="IMG-20221203-WA0001_1" /></a><br /><em>Gary 著學生低調使用毛巾（相片由受訪者提供）</em></p>
 <p>他指，有校內老師透露，有學生在召見期間因害怕而哭泣，他認為學校看似在維護學生，但實際上是擔心「要孭鑊」，又斥校方報警處理事件反令學生陷於不義，在校內製造「白色恐怖」令學生愈來愈害怕。他認為，社會校方應輔導學生如何面對現時的情況，比報警處理更幫助到學生。</p>
 <p><strong>跑會簡稱與學校相同 非代表該校</strong></p>
-<p>至於校方指他未獲授權印學校英文簡稱「SFCC」在毛巾上，他稱跑會「孫之友越野會」（SUN’S FELLOW CROSS-COUNTRY CLUD）在上年11月已獲警方批准申請為社團，其簡稱同為「SFCC」，與校方英文簡稱相同，加上學校的英文簡稱沒有申請專利，亦沒註冊商標，在網頁搜尋器搜查「SFCC」時，不會直接搜出該校資料，認為「SFCC」並不代表該校，可以是代表跑會。</p>
+<p>至於校方指他未獲授權印學校英文簡稱「SFCC」在毛巾上，他稱跑會「孫之友越野會」（SUN’S FELLOW CROSS-COUNTRY CLUB）在上年11月已獲警方批准申請為社團，其簡稱同為「SFCC」，與校方英文簡稱相同，加上學校的英文簡稱沒有申請專利，亦沒註冊商標，在網頁搜尋器搜查「SFCC」時，不會直接搜出該校資料，認為「SFCC」並不代表該校，可以是代表跑會。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/yhFdVu7e1U" title="WhatsAppphoto"><img src="https://live.staticflickr.com/65535/52559938157_803e17b108_b.jpg" width="230" alt="WhatsAppphoto" /></a><br /><em>Gary 向校長解釋毛巾上的英文簡稱是指跑會（相片由受訪者提供）</em></p>
 <p><strong>稱「香港加油」不犯法 已提醒學生小心使用</strong></p>
-<p>事實上，該批毛巾早在2021年5月時已被學校發現，並發信警告仍在職的Gary 未授權用學校名稱印製物品將被追究。但Gary 隨後向警務處申請與學校簡稱同名的跑會為社團，希望申請獲批後，可名正言順把該批毛巾派給學生。但他強調，自己是負責任的老師，並不會著學生以身試法，他認為在2021年的渣打香港馬拉松，大會曾要求衣服上印有「香港加油」等字眼的跑手換衫才能參賽，但警方事後沒有介入調查，亦沒有人被捕，認為毛巾印有相同字眼，不違犯任何法律。</p>
+<p>事實上，該批毛巾早在2021年5月時已被學校發現，並發信警告仍在職的 Gary 未授權用學校名稱印製物品將被追究。但 Gary 隨後向警務處申請與學校簡稱同名的跑會為社團，希望申請獲批後，可名正言順把該批毛巾派給學生。但他強調，自己是負責任的老師，並不會著學生以身試法，他認為在2021年的渣打香港馬拉松，大會曾要求衣服上印有「香港加油」等字眼的跑手換衫才能參賽，但警方事後沒有介入調查，亦沒有人被捕，認為毛巾印有相同字眼，不違犯任何法律。</p>
 <p><strong>計劃回港處理遭學生反對 「你話幾悲哀」</strong></p>
-<p>現居台灣的Gary 表示，原本計劃回港處理事件，「但啲學生叫我走，『呀sir 佢報警處理，你快啲走呀，你快啲改機票，可唔可以即刻走呀』，你話幾悲哀」。</p>
-</div></div></div>
+<p>現居台灣的 Gary 表示，原本計劃回港處理事件，「但啲學生叫我走，『呀 sir 佢報警處理，你快啲走呀，你快啲改機票，可唔可以即刻走呀』，你話幾悲哀。」</p>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
