--- a/_posts/2022-12-15-INMEDIA-三日三宗奪命工業意外-工權會促政府落地檢視問題-唔係交文件-睇文件.html
+++ b/_posts/2022-12-15-INMEDIA-三日三宗奪命工業意外-工權會促政府落地檢視問題-唔係交文件-睇文件.html
@@ -22,4 +22,6 @@ author: 獨媒報導
 <p><strong>勞工處：未來數天巡查「精進地盤」</strong></p>
 <p>勞工處表示，非常關注近日接連發生的意外，會嚴肅跟進每宗意外，以確定意外成因及查找有關持責者的法律責任。 處方指，會因應意外的性質，按需要進行特別執法行動及深入巡查，若發現有違反職安健法例的規定，會即時採取執法行動，不會先作警告。</p>
 <p>處方又稱，今日起至未來數日展開特別行動，巡查「精進地盤」位於全港的建築地盤，包括全方位檢視其安全工作系統，若發現有違例事項，定會依法處理。</p>
+<p>對於今早事故，勞工處晚上再發新聞稿表示高度關注，對事件十分難過，並對其家屬致以深切慰問。處方表示，已即時派員到意外現場展開調查，並向有關僱主發出「暫時停工通知書」，停止其在該處所進行防衝板的漏氣壓力測試。勞工處又指正全速進行調查，確定意外成因，指如有違例定必依法處理。</p>
+<p>處方又指，會於日內在網頁發放「職安警示」，以及透過電子郵件通知持責者、工會和安全從業員專業組織等，簡介意外事故和提醒業界採取安全預防措施，避免同類意外發生。</p>
 </div></div></div>
