--- a/_posts/2022-12-15-PQ-高虹安因詐領助理費案遭檢調約談-北檢帶走高立委辦主任.html
+++ b/_posts/2022-12-15-PQ-高虹安因詐領助理費案遭檢調約談-北檢帶走高立委辦主任.html
@@ -20,7 +20,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。.jpeg" alt="疑似高虹安男友李忠庭今早至北機應訊。（圖／中央社）" class="wp-image-122945" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。-300x169.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。-768x432.jpeg 768w" sizes="(max-width: 608px) 100vw, 608px" /><figcaption>疑似高虹安男友李忠庭今早至北機應訊。（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。.jpeg" alt="疑似高虹安男友李忠庭今早至北機應訊。（圖／中央社）" class="wp-image-122945" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。-300x169.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/00ca0bae-中央社派設疑似高虹安男友李忠庭至北機應訊。-768x432.jpeg 768w" sizes="(max-width: 608px) 100vw, 608px" /><figcaption>疑似高虹安男友李忠庭今早至北機應訊。（圖／中央社）</figcaption></figure></div>
 
 
 
