--- a/_posts/2022-12-16-INMEDIA-貨車遭巴士猛撼-兩名外判清潔工亡-四日內第五宗嚴重工業意外五人亡.html
+++ b/_posts/2022-12-16-INMEDIA-貨車遭巴士猛撼-兩名外判清潔工亡-四日內第五宗嚴重工業意外五人亡.html
@@ -13,6 +13,8 @@ author: 獨媒報導
 <p>今日早上在東涌的嚴重交通意外，亦涉及當值中的工人。根據網上一段涉事前的<a href="https://www.youtube.com/watch?v=9e6afgaSbZk">車cam片段</a>，當時停泊在路旁的一部密斗貨車及客貨車，前方有兩名司機及四名清潔工人，他們屬食環署外判的耀發環境服務有限公司，當時正在路旁清理雜草，六人皆有身穿反光衣。片段顯示，該路段目前的右方正在修路，路面有相關指示，貨車則停泊在該指示後方，只放置了一塊小型的藍色箭嘴指示牌，未有放置雪糕筒。</p>
 <p>意外發生時，一部龍運E36A巴士駛至，撞上停泊的貨車，貨車再撞向客貨車，當時貨車上有兩人休息，另四人在路旁休息。路旁的四人被衝前的車輛撞倒，貨車司機當場不治，另一名客貨車司機送院後不治，另兩名同約50多歲的女清潔工人重傷，連同巴士上的乘客合共造成2人死亡、10人受傷。28歲的龍運巴士司機涉嫌危險駕駛導致他人死亡被捕。</p>
 <p><a href="https://www.facebook.com/ariav1981/posts/pfbid07znM7Z162xycc6F4yh239vR9oV6hi3dftPkMrLYj1R3xJqBn55Vgg1JRmiwtfaVMl">工業傷亡權益會在Facebook 發帖</a>表示，該會正在醫院協助事故中傷亡的工人及家屬。該會表示，目前在清潔道路並無安全指引，令僱主及僱員忽視在行駛中的道路進行清潔的危險性。工權會認為道路清潔工作與道路工程性質相近，倡參考後者的安全守則，設置工程車、護航車及緩撞裝置，並設置足夠的警告閃燈、交通圓筒、交通標誌、指示燈以及護欄等。</p>
+<p>警方表示，64歲死者為中型貨車司機，身體多處受傷，現場被證實死亡。至於52歲死者為輕型客貨車司機，他一度被困客貨車車底，由消防員救出，身體多處受傷，昏迷被送往北大嶼山醫院，延至下午1時22分不治。另外兩名58歲及51歲女子分別盤骨及手腳受傷，清醒送往瑪嘉烈醫院。</p>
+<p>當時在車上的73歲男子及54歲女子，以及巴士上介乎28至94歲的2男4女乘客受輕傷，分別送往瑪嘉烈醫院及北大嶼山醫院治理。</p>
 <p>香港專營巴士僱員總工會亦強烈促請政府提高業界職業安全意識，包括檢視道路上的標示安排並監督外判承辦商做好職業安全措施。</p>
 <p>龍運巴士表示，對有工程人員不幸身亡及受傷感到非常難過，對死者和家屬致以深切哀悼和慰問，龍運會向傷者及家屬提供適切協助，公司會全力配合警方調查意外原因。</p>
 </div></div></div>
