--- a/_posts/2022-12-16-INMEDIA-馬浚偉盼加入警隊-鄧炳強笑稱自編自演警察即可.html
+++ b/_posts/2022-12-16-INMEDIA-馬浚偉盼加入警隊-鄧炳強笑稱自編自演警察即可.html
@@ -14,6 +14,6 @@ author: 獨媒報導
 <p><strong>笑言喜歡肥媽煮菜 否則會被打</strong></p>
 <p>鄧炳強問馬浚偉稱最拿手的小菜，他表示是家常便飯，過節的時候可以一個人在家煮七道菜，鄧炳強就開玩笑稱：「犀利喎，第日要請我食喎。」鄧炳強隨即追問馬浚偉，稱要代小編問他比較喜歡吃肥媽或鼎爺煮的菜式。馬浚偉聽到後顯得猶豫，想了想後稱選擇肥媽，表示：「肥媽會打我㗎，如果我唔揀⋯⋯。」</p>
 <p>鄧炳強之後指馬浚偉較少飾演反派角色，問對方有沒有想過挑戰自己。馬浚偉就指，在內地劇集《鴛鴦佩》中一人分飾正反兩角，並借機宣傳明年一人分飾七角的舞台劇，「好變態㗎。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4ahY8ehyU8" title="螢幕截圖 2022-12-16 下午5.29.58"><img src="https://live.staticflickr.com/65535/52566891599_57d0de2476_b.jpg" width="1024" alt="螢幕截圖 2022-12-16 下午5.29.58" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4ahY8ehyU8" title="螢幕截圖 2022-12-16 下午5.29.58"><img src="https://live.staticflickr.com/65535/52566891599_57d0de2476_b.jpg" width="1024" alt="螢幕截圖 2022-12-16 下午5.29.58" /></a><br /><em>Facebook截圖</em></p>
 <p>鄧炳強續指，馬浚偉曾經擔任懲教署的更生大使，更曾為對方撰寫推薦信，問馬在甚麼機緣下幫助更生人士。馬浚偉指自己出身基層，曾需要接受別人援助，長大以後亦希望向他人伸出援手，並稱：「人誰無過，每個人喺人生路上都有可能會犯錯，如果唔係去到彌天大錯，覺得都應該盡量要俾次機會佢哋。」</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
