--- a/_posts/2022-12-18-INMEDIA-立會補選-何厚鏵姪兒當選-葉劉淑儀-續努力培養年輕人加入議會.html
+++ b/_posts/2022-12-18-INMEDIA-立會補選-何厚鏵姪兒當選-葉劉淑儀-續努力培養年輕人加入議會.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W82u7VgK56" title="無標題"><img src="https://live.staticflickr.com/65535/52570679905_ef047394eb_b.jpg" width="1024" alt="無標題" /></a><br /><em>黎棟國（右二）</em></p>
 <p><strong>被問遲交同意書  黃錦輝拒答</strong></p>
 <p>全國政協委員、中大工程學院副院長黃錦輝以983票當選，得票在6人中排第二。黃錦輝表示，有3名創科界人士成功當選是好事，指本港受社會事件及疫情影響，已失去了3年時間發展，令創科一路滯後，期望日後在議會內能大力推動創科。</p>
-<p>有記者引述報導問黃錦輝，指他早前遲交同意書，可能會招致選舉澄清，或選舉結果受到挑戰。黃錦輝就表示：「我唔答呢條問題，下一位。」他其後續稱：「我哋都係針對性講吓個啲嘢好啲。」</p>
+<p>有記者引述報導問黃錦輝，指他早前遲交同意書，可能會招致選舉呈請，或選舉結果受到挑戰。黃錦輝就表示：「我唔答呢條問題，下一位。」他其後續稱：「我哋都係針對性講吓個啲嘢好啲。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/CrY07s5LA2" title="無標題"><img src="https://live.staticflickr.com/65535/52569769552_1d5e126e19_b.jpg" width="1024" alt="無標題" /></a><br /><em>黃錦輝</em></p>
 <p><strong>將身兼兩職  尚海龍：把大部分時間投入立法會</strong></p>
 <p>商湯科技香港公司總經理尚海龍以812票當選，取得最後一席。他指作為政治素人，每一票都由自己積極爭取，形容是來之不易。被問到如何分配時間，尚海龍表示，會以香港福祉為優先，妥善平衡工作及議員職務，及把大部分時間投入立法會。</p>
