--- a/_posts/2022-12-19-INMEDIA-立場案-控方稱多篇文章與國安法及初選相關-辯方-間間傳媒都有講.html
+++ b/_posts/2022-12-19-INMEDIA-立場案-控方稱多篇文章與國安法及初選相關-辯方-間間傳媒都有講.html
@@ -43,17 +43,13 @@ author: 獨媒報導
 <p><strong>控方讀出區家麟、林彥邦等6篇文章 顯示控方案情「可以有唔同鋪排」</strong></p>
 <p>控方其後於庭上讀出欲依賴的6篇文章，包括2020年7月1日《國安法》實施首天，林彥邦撰寫的〈速讀《港區國安法》〉；2021年1月6日55名初選參與者被捕，羅冠聰撰寫的〈在反抗就是罪名的香港，我們該如何回應大搜捕〉、及區家麟翌日撰的〈歹毒清算 惡貫滿盈〉；初選47人被落案控告後，林彥邦於3月2日撰的〈這是一場不義的審訊〉、英國分社報導〈【特寫】英國多個城市集會聲援 47 人　參加者多申 BN(O)：我們不會忘記〉、及3月5日區家麟撰寫的〈「任何人都不能凌駕法律」，除了我〉。</p>
 <p>控方表示，並非指以上文章特別相關，或其他沒有讀出的文章就不相關，只是不希望令法庭負擔過重看太多文章才作挑選，目的是顯示控方案情「可以有唔同鋪排」。</p>
+<p><strong>警長於拘捕同日要求《立場》下架5文章</strong></p>
+<p>警長3156下午作供，稱去年12月29日、即前《立場》高層被捕當日，要求《立場》將5篇文章下架，並將信件呈遞予林紹桐及鍾沛權簽署。至下午約1時半，一名自稱《立場》代表致電他，稱文章已移除，他確認已「死 link」、無法瀏覽，惟網站其他頁面仍運作。他並於下午4時，發現《立場》網站指即時停止運作。</p>
+<p>庭上透露，該5篇文章包括何桂藍參加初選專訪、區家麟博客〈「煽動」作為一種法律武器〉及〈災難現場〉、中大衝突兩年文章〈畢業生憶徒步前行護校 哀山城人文精神消逝〉，以及鄒幸彤獲頒「中國傑出民主人士奬」的報導。</p>
 <p>案件下午續審，雙方將就永久終止聆訊申請作結案陳詞。</p>
 <p><strong>控方審訊時呈逾千頁新文件 辯方申永久終止聆訊</strong></p>
 <p>本案上月審訊時，其中一名作供警廖浩明（音譯）在盤問下透露，曾按上司偵緝高級督察盧健賢指示，擷取逾300篇《立場》文章，但僅向案件主管交出30篇。控方稱不知情，其後於審訊第5天新呈6個文件夾、逾1,500頁文件，並為發出截圖指示的小隊主管補錄口供。辯方稱口供與早前警員「有出入」，亦會影響盤問方向，申請永久終止聆訊，押後一個月處理。</p>
 <p>被告依次為 Best Pencil (Hong Kong) Limited、《立場》前總編輯鍾沛權（53歲）及前署任總編輯林紹桐（35歲），他們被控一項串謀發布及/或複製煽動刊物罪，指他們於2020年7月7日至2021年12月29日在香港，一同串謀和與其他人串謀發布及/或複製煽動刊物，即具以下意圖的刊物：</p>
-<p>a) 引起憎恨或藐視中央或香港特別行政區政府或激起對其離叛<br />
-b) 激起香港居民企圖不循合法途徑促致改變其他在香港的依法制定的事項<br />
-c) 引起對香港司法的憎恨、藐視或激起對其離叛<br />
-d) 引起香港居民間的不滿或離叛<br />
-e) 煽惑他人使用暴力<br />
-f) 慫使他人不守法或不服從合法命令</p>
-<p>案件編號：DCCC265/2022</p>
 <blockquote><p>a) 引起憎恨或藐視中央或香港特別行政區政府或激起對其離叛<br />
 b) 激起香港居民企圖不循合法途徑促致改變其他在香港的依法制定的事項<br />
 c) 引起對香港司法的憎恨、藐視或激起對其離叛<br />
