--- a/_posts/2022-12-19-INMEDIA-被指隧道貼文宣兼襲休班警-物管經理上訴遭駁回.html
+++ b/_posts/2022-12-19-INMEDIA-被指隧道貼文宣兼襲休班警-物管經理上訴遭駁回.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/1219-01.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 39歲物業管理經理被指前年在沙田行人隧道內貼文宣及塗鴉，之後腳踢休班警員，經審訊被裁定刑毀及拒捕罪成。判囚4星期。他不服定罪提出上訴，高院原訟庭法官黎婉姬上周五（16日）頒下判決，指親自檢視上訴人的手套後，發現沾有膠水，符合張貼海報的行為，又指辯方目擊證人所稱休班警叉頸的說法，與醫療報告內容有重大的分歧，裁定原審定罪穩妥，因此駁回上訴，維持原判。</p>
+<img src="https://www.inmediahk.net/files/column_images/1219-01.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 39歲物業管理經理被指前年在沙田行人隧道內貼文宣及塗鴉，之後腳踢休班警員，經審訊被裁定刑毀及拒捕罪成，判囚4星期。他不服定罪提出上訴，高院原訟庭法官黎婉姬上周五（16日）頒下判決，指親自檢視上訴人的手套後，發現沾有膠水，符合張貼海報的行為，又指辯方目擊證人所稱休班警叉頸的說法，與醫療報告內容有重大的分歧，裁定原審定罪穩妥，因此駁回上訴，維持原判。</p>
 <p>上訴人陸昶昇（39歲，物業管理經理）原審時被裁定刑事損壞及抗拒執行職責的警務人員罪成。控罪指他於2020年3月31日，在大圍大涌橋路NS23號行人隧道內，與3名不知名人士，無合法辯解而損壞隧道，以及抗拒執行職務的警員13455。</p>
 <p><strong>官：手套上有膠水 符合張貼海報行為</strong></p>
 <p>上訴人爭議休班警員「捉錯人」。休班警員在審訊期間供稱，留意到有4名人士在行人隧道內張貼文宣及以噴漆塗鴉，其中3人穿著「黑色外套」，然而上訴人被捕時的衣著為「黑色風褸內有白色恤衫」，質疑休班警員觀察錯誤。惟法官黎婉姬指休班警員從側面觀察隧道內人士，看不見外套內的白色恤衫亦不足為奇，反指上訴人外觀符合穿黑色外套人士。</p>
