--- a/_posts/2022-12-20-INITIUM-西西的未来文学备忘录-政治不要管文学-文学可以管政治.html
+++ b/_posts/2022-12-20-INITIUM-西西的未来文学备忘录-政治不要管文学-文学可以管政治.html
@@ -66,6 +66,7 @@ author: 特约撰稿人 廖伟棠
  
  
  
+ 
 
  
  
@@ -88,29 +89,27 @@ author: 特约撰稿人 廖伟棠
 </p><p>她直接用在世的文学去实践新儒家在花果飘零之后的“灵根自植”，不假于人，也不依靠对远方和古代的遐想。</p>
 <p></p><p>体内的河却未曾稍停对我们的折磨，尤其西西一代香港作家更是痛苦于此。正如香港作家玺玺（朱珺）的小说《废船》最后一句是：“只有一滴水，也能流到中国。”——这般执著和悲苦弥漫在从戴天到蔡炎培等诗人的早期诗作上。但西西的中国观稍为超然一些、颠覆一些。虽然她也写过“我当然要做黄帝的子孙。问的人就说了，在这里，做黄帝的子孙有甚么好处，你会没有护照的呀。”（《我城》），虽然她写过充满儒家的赤子之心和仁者爱人的《热水炉》，也景仰新儒家大师牟宗三，写过“无论住在哪里总是漂泊 / 但牟老师毕竟在土瓜湾住了许多许多年 / 土瓜湾就有了值得居住的理由”。</p><p>但西西的诗文，却让我相信：“土瓜湾有值得居住的理由 / 因此牟老师就在土瓜湾住了许多许多年”，因为她直接用在世的文学去实践新儒家在花果飘零之后的“灵根自植”，不假于人，也不依靠对远方和古代的遐想。</p><p><a class="image" href="https://theinitium.com/article/20221220-culture-xixi-writer-literature/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9de2d348b9f54c0c8324ba0f3848f7a5.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="已故香港作家西西的著作。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">已故香港作家西西的著作。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>忧城忧世：香港终必爆发的绝望</p><p><small>“出发前一晚，我辗转反侧，梦到山海关、嘉峪关，自小在书本上认识，很兴奋，但长城忽而变成一条长而蜿蜒的巨龙，向山上蹿去，我们穷于追捕，又怕它转过来，向我们张口。我汗流洪背，但又想探问究竞，不想放弃。然后我听到容儿在身边说：别怕。”——《钦天监》</small></p><p>我们也不应忘记在西西一次次远游大陆，“认祖关社”之余，她以散文集《交河》和很多诗做出的讽喻。像《咳嗽的同志》以被商品化的龙骨，还有“咳嗽的同志 / 坐在长桌的一端 / 不停地抽烟 / 他实在瘦 / 瘦得露出了不少骨头。”对当时被港台爱国者大肆煽情的“龙的传人”的解构，甚至称得上辛辣。可以说，西西不止学到了南美洲的魔幻现实主义手法，也与后者隐藏的现实批判、独裁历史批判深有共鸣，这样一种政治关切，一直延续到《钦天监》。</p><p>至于影响香港知识分子至深的六四镇压悲剧，在西西的诗里也被多次触及，多数是如《六月》那种表面看来隐约委婉，“不无少望，然淡淡直叙，怨而不怒”的温柔敦厚的讽喻诗。但它的每一句都从中间断裂、每一句都是跨句，听如哽咽；从视觉上还能看到一条逗号和句号从句子中间蜿蜒而下，像是一条在广场上的裂缝一样把这首诗劈成两半。</p><p><small>《六月》</small></p><p><small>每年六月，我们孕育<br>
-远行的梦，看一点 <br>
-山水，买一点书  <br>
-探访朋友。六月  <br>
-又来了，天色  <br>
-诡异，你们那里  <br>
-骤然雪崩，透过  <br>
-荧光屏幕，坦示  <br>
-惨白的广场，都城  <br>
-满罩浓霜，寒流  <br>
-不断扩散，所有的人  <br>
-震惊   <br>
-这么严峻的六月<br>  
-你好么？只有  <br>
-降温的消息，太冷  <br>
-太冷了，远方的景物  <br>
-凝结成冰  <br>
-我们的梦气球  <br>
-一一冻裂。摊开  <br>
-地图，不知道  <br>
-两只脚，还可以选择<br>  
-哪一个方向</small>
-   
-<small>一九八九．七．四 </small></p><p>还有同样写于1989年的《天色微明》：</p><p><small>真干净<br>
+远行的梦，看一点<br>
+山水，买一点书<br>
+探访朋友。六月<br>
+又来了，天色<br>
+诡异，你们那里<br>
+骤然雪崩，透过<br>
+荧光屏幕，坦示<br>
+惨白的广场，都城<br>
+满罩浓霜，寒流<br>
+不断扩散，所有的人<br>
+震惊<br>
+这么严峻的六月<br>
+你好么？只有<br>
+降温的消息，太冷<br>
+太冷了，远方的景物<br>
+凝结成冰<br>
+我们的梦气球<br>
+一一冻裂。摊开<br>
+地图，不知道<br>
+两只脚，还可以选择<br>
+哪一个方向</small></p><p><small>一九八九．七．四 </small></p><p>还有同样写于1989年的《天色微明》：</p><p><small>真干净<br>
 真干净<br>
 徬佛什么也不曾<br>
 发生</small></p><p><small>⋯⋯你的胸膛长出<br>
