--- a/_posts/2022-12-19-INITIUM-早报-美国国会骚乱事件众议院调查委员会要求司法部起诉特朗普煽动叛乱.html
+++ b/_posts/2022-12-19-INITIUM-早报-美国国会骚乱事件众议院调查委员会要求司法部起诉特朗普煽动叛乱.html
@@ -22,7 +22,7 @@ author:
 <h3>俄罗斯再用无人机袭击基辅能源设施</h3>
 <p><a href="https://www.reuters.com/world/its-time-negotiated-peace-ukraine-kissinger-says-2022-12-18/">俄罗斯周一再度使用无人机</a>袭击乌克兰首都基辅及周边地区的关键能源基础设置。乌克兰军方指，防空部队击落了28架无人机中的23架，大部分是在基辅上空。</p>
 <p>乌方还指，这是俄军六天内第三次空袭，且继续针对电网等基础设施，在气温零度以下的冬季制造大面积停电。</p>
-<p>据报导，俄罗斯使用的“神风”无人机是一种廉价的一次性无人机，它们直接飞向目标，高速撞毁并引爆。</p>
+<p>据报导，俄罗斯使用的自杀式无人机是一种廉价的一次性无人机，它们直接飞向目标，高速撞毁并引爆。</p>
 <p>乌方昨晚后续消息又指，尽管基辅地区有九栋建筑被毁，但没有收到人员伤亡报告。</p>
 <h3>普京访问白罗斯，乌克兰担忧联手</h3>
 <p><a href="https://www.nbcnews.com/news/world/putin-heads-belarus-russian-drones-target-ukrainian-capital-rcna62334">俄罗斯总统普京周一访问白罗斯</a>，与白罗斯总统卢卡申科会谈。这是普京自2019年以来首次访问白罗斯，俄国防部长和外交部长同行。</p>
