--- a/_posts/2022-12-20-INMEDIA-交椅洲填三島共1,000公頃-造價5,800億-擬建鐵路港島經人工島往洪水橋.html
+++ b/_posts/2022-12-20-INMEDIA-交椅洲填三島共1,000公頃-造價5,800億-擬建鐵路港島經人工島往洪水橋.html
@@ -9,6 +9,9 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/202212204.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>一直備受爭議的「明日大嶼」交椅洲填海工程，當局<a href="https://www.legco.gov.hk/yr2022/chinese/panels/dev/papers/dev20221229cb1-930-1-c.pdf">向立法會發展事務委員會提交文件</a>，交代中部水域人工島研究。人工島將分為三座，合共1,000公頃，估算造價達5,800億。當局亦擬興建的新鐵路，將延伸至洪水橋，由港島香港大學站，經人工島、大嶼山、屯門東近小欖及洪水橋，接駁《施政報告》中提出的港深西部鐵路。</p>
+<p><a href="https://www.facebook.com/localresearch/photos/a.326590167437063/5877209219041769">不過本土研究社質疑</a>，「明日大嶼」爭議四年，由2018年的6,240億降至2019年的5,000億，再到今日，政府仍未給出一個更確切的造價，認為文件的5,800億造價屬低估。本研社指，填海範圍水深比機場第三條跑道的3至4米及港珠澳大橋人工島的2至5米深，認為更深的填海產生更多不穩定性、超支及各種額外成本。</p>
+<p>綠色和平則指，本港錄得歷來第二高的赤字，加上目前甲級寫子樓空置率高，難以說服公眾斥巨資推動「明日大嶼」。該團體又提到即便5,800億估算正確，但按年均3.59％成本上升推算，單計交椅洲人工島已達6,426億。對生態影響方面，綠色和平指當局未諮詢環諮會下，更動工程將人工島「二開三」，或低估工程對環境的影響。</p>
+<p><strong>人工島分三座填</strong></p>
 <p>土木工程拓展署及規劃署於2021年6月展開中部水域人工島研究，預計於2024年年底完成。據提交立法會的文件顯示，人工島將分為三座，分別為A島380公頃、B島380公頃及C島240公頃。文件稱，人工島避開交椅洲等島嶼沿岸具生態價值的石珊瑚群落，三島之間預留Y型水道，能減輕填海對水質及生態造成的影響。三島於位處較淺水（平均約8米）的區域，避開交椅洲東面較深的水域（約12米至15米）。當局指環境影響評估研究初步結果，對生態和漁業沒有不可克服的問題。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6029i7K9am" title="螢幕截圖 2022-12-20 下午2.59.03"><img src="https://live.staticflickr.com/65535/52574249832_6b300695e1_b.jpg" width="1024" alt="螢幕截圖 2022-12-20 下午2.59.03" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0cTB9xr02j" title="螢幕截圖 2022-12-20 下午2.59.11"><img src="https://live.staticflickr.com/65535/52575166315_ef0b2ab357_b.jpg" width="1017" alt="螢幕截圖 2022-12-20 下午2.59.11" /></a></p>
@@ -27,7 +30,9 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/40503561603/in/photolist-2k3NebN-2k3NeqL-2k3S1NM-2k3S3tq-2k3S3K7-2k3S54e-2k3SHz2-2k3SHVx-2k3SJaa-2k3SK44-2k3SKv1-2k3SLjF-2k3SLFC-RynZH6-RynZJi-Ryo9gD-Tbvz8q-24DWbZa-24DWc24-24DWc2p-24DWc2K-24DWc4i-24DWc5a-24DWc5F-24Hacfr-24HakK2-2bBRkaA-2c4KpqT-2c4KprK-2dSBmnP-2dSBmoR-2dSBmpn-2dSBmqK-2dSBmqV-2dSBmrM-2dSBmvK-2ff4izW-2ff4iCb-2ff5Ur7-2ff6mdC-2fjJJuc-24DWc3r-25kZRot-25kZRrV-2bkcEev-2bkcEfT-2bBRkb7-2eyD4wR-2fSZWkL-2fXAoN2" title="螢幕快照 2019-03-26 下午2.44.08"><img src="https://live.staticflickr.com/7881/40503561603_4fa43e8e5b_b.jpg" width="1024" alt="螢幕快照 2019-03-26 下午2.44.08" /></a><br /><em>鐵路的走線與研究曾提出的走線有頗大的不同，當時研究的走線經屯門東往屯門碼頭區及內河碼頭一帶。</em></p>
 <p>實政圓桌立法會議員田北辰對鐵路走線不滿，往洪水橋只往服務跨境旅客及北部都會區，忽視屯門區50萬居民，稱會「誓死反對」。</p>
 <p><strong>陳學鋒倡連接坪洲</strong></p>
-<p>民建聯劉國勳表示，政府未來仍需投入北部都會區基建，倡引入其他方案融資，包括公私營合作填海或興建鐵路。他不傾向發債，認為息口並不吸引。</p>
-<p>民建聯陳學鋒倡以人工島土地，協助市區重建局重置市區居民。不過對道路及鐵路落腳點座落中西區，陳學鋒盼政府提供更多數據，能應付新需求。他又提到坪洲居民質疑為何「未能近水樓台先得月」，倡以行人徑及單車徑連接人工島。</p>
+<p>民建聯劉國勳表示，政府未來仍需投入北部都會區基建，倡引入其他方案融資，包括公私營合作填海或興建鐵路。他不傾向發債，認為息口並不吸引，亦不傾向「建造及營運」模式。劉國勳又建議引「土地債券」，收地時容許業權人換取人工島土地。</p>
+<p>民建聯陳學鋒倡人工島房屋可以「遠期樓花」方式出售，並促市區重建局與發展局合作，推動市區重建。不過對道路及鐵路落腳點座落中西區，陳學鋒盼政府提供更多數據，證明能應付新需求。他又提到坪洲居民質疑為何「未能近水樓台先得月」，倡以道路、行人徑或單車徑等連接人工島。民建聯支持鐵路延伸至洪水橋，可直接連接深圳、北部都會區至港島。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6840So47eq" title="無標題"><img src="https://live.staticflickr.com/65535/52575302245_8d6574cb1b_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>香港測量師學會則對計劃表示歡迎，認為有助增加土地供應。學會又稱，賣地收入只計及商業及私人住宅土地的價值，未有反映公營房屋用地的價值。</p>
+<p>議程原定於周一（12月19日）立法會發展事務委員會討論，不過在會前分拆於12月29日舉行特別會議討論。</p>
 </div></div></div>
