Update VOCUS 2022-12-21 patch

--- a/_posts/2022-12-19-VOCUS-貧困旅行記-寂寥之旅讓人安心.html
+++ b/_posts/2022-12-19-VOCUS-貧困旅行記-寂寥之旅讓人安心.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">當然我覺得柘植義春本人其實沒有那麼的詩情畫意，多是誤打誤撞想享受自己的窮遊和自身覺得有趣和有意思的場所，如同他漫畫所反映出來給人的感覺。在《貧困旅行記》每一篇章都會附上照片和地圖，也會有他與家人入鏡的照片，充滿家族旅遊的生活感，但同時搭配上柘植義春的隨筆又增添生活中的一點點魔幻。</div>
 <div class="draft-block draft--p left">如果說逃避可恥但有用，柘植義春可能是其代表，不僅不想面對世界用力逃走，還從逃跑之中獲取什麼回歸，等到一無所有又再逃。逃到最後連家人都從受夠了變成請自便般的習以為常。</div>
 <div class="draft-block draft--p left">我認為柘植義春或多或少也染上日本那種侘寂美學，但正好性格與敘事和當今年輕人不謀而合，《貧困旅行記》是一部就算不在日本，你也能想像的日本窮遊風景。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/n7EJQyoJO7Q"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/n7EJQyoJO7Q"></iframe></div>
