--- a/_posts/2022-12-21-PQ-中國搶藥潮導致台灣普拿疼缺貨-薛瑞元-退燒藥夠用-民眾勿恐慌.html
+++ b/_posts/2022-12-21-PQ-中國搶藥潮導致台灣普拿疼缺貨-薛瑞元-退燒藥夠用-民眾勿恐慌.html
@@ -16,7 +16,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m.jpg" alt="" class="wp-image-123430" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>普拿疼。圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m.jpg" alt="" class="wp-image-123430" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/fb6f9795-20221219000116m-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>普拿疼。圖／中央社</figcaption></figure></div>
 
 
 
@@ -52,4 +52,4 @@ author: 霍布斯潘
 
 
 
-<p><br>資料來源：<a href="https://www.facebook.com/TSPDrShe/posts/pfbid02t8znn7qDFQ4sYvc7zPtTyMA26WDCsTpcdAb2hhbwRNjotP7KGU3XkMpKHb3MjMqCl" target="_blank" rel="noopener">吳欣岱臉書</a>　指揮中心記者會　<a href="https://www.pourquoi.tw/taiwan-news-20221214-1/" target="_blank" rel="noopener">朱立倫發言</a>　食藥署網站</p><p>The post <a href="https://pourquoi.tw/taiwan-news-20221221-2/">中國搶藥潮導致台灣普拿疼缺貨　薛瑞元：退燒藥夠用，民眾勿恐慌</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p><br>資料來源：<a href="https://www.facebook.com/TSPDrShe/posts/pfbid02t8znn7qDFQ4sYvc7zPtTyMA26WDCsTpcdAb2hhbwRNjotP7KGU3XkMpKHb3MjMqCl" target="_blank" rel="noopener">吳欣岱臉書</a>　指揮中心記者會　<a href="https://www.pourquoi.tw/taiwan-news-20221214-1/" target="_blank" rel="noopener">朱立倫發言</a>　食藥署網站　<a href="https://ctee.com.tw/livenews/ch/ctee/a88131002021081815315012" target="_blank" rel="noopener">退燒藥資訊</a></p><p>The post <a href="https://pourquoi.tw/taiwan-news-20221221-2/">中國搶藥潮導致台灣普拿疼缺貨　薛瑞元：退燒藥夠用，民眾勿恐慌</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
