--- a/_posts/2022-12-21-PQ-中國搶藥潮導致台灣普拿疼缺貨-薛瑞元-退燒藥夠用-民眾勿恐慌.html
+++ b/_posts/2022-12-21-PQ-中國搶藥潮導致台灣普拿疼缺貨-薛瑞元-退燒藥夠用-民眾勿恐慌.html
@@ -36,11 +36,11 @@ author: 霍布斯潘
 
 
 
-<p>醫生吳欣岱表示，會造成缺藥的情形，有人搶了寄去中國只是其中一個因素，中國封城很多原料出不來，連帶影響其他國家的生產也是一個問題；至於對於王必勝表示「台灣退燒藥供應暫時不會有問題」說法，吳欣岱除了表示認同外，她還額外強調兩點：一則為必須拋棄中國，建立民主自由國家的醫藥產業鍊；二則是，除了藥品外，必須密切注意各種物資的搶購情形。</p>
+<p>醫生<strong>吳欣岱</strong>表示，會造成缺藥的情形，有人搶了寄去中國只是其中一個因素，中國封城很多原料出不來，連帶影響其他國家的生產也是一個問題；至於對於王必勝表示「台灣退燒藥供應暫時不會有問題」說法，吳欣岱除了表示認同外，她還額外強調兩點：<strong>一則為必須拋棄中國，建立民主自由國家的醫藥產業鍊；二則是，除了藥品外，必須密切注意各種物資的搶購情形</strong>。</p>
 
 
 
-<p>今日，衛福部長薛瑞元表示，如果是單一品牌的解熱鎮痛劑，例如普拿疼，有國外搶貨或是台灣民眾搶貨寄送國外的情況；<strong>但是同一成分的藥品不缺，請民眾不必恐慌，相關單位已密切注意藥品市場變化，退燒藥在醫療體系中仍然夠用。</strong></p>
+<p>今日，衛福部長<strong>薛瑞元</strong>表示，如果是單一品牌的解熱鎮痛劑，例如普拿疼，有國外搶貨或是台灣民眾搶貨寄送國外的情況；<strong>但是同一成分的藥品不缺，請民眾不必恐慌，相關單位已密切注意藥品市場變化，退燒藥在醫療體系中仍然夠用。</strong></p>
 
 
 
@@ -48,7 +48,11 @@ author: 霍布斯潘
 
 
 
-<p class="pqnote">對比上禮拜國民黨主席朱立倫在中國解封後，呼籲開放小三通，面對嚴峻中國疫情，協助中國獲取足夠醫藥，當時就遭到醫師吳欣岱質疑「之前資訊戰方艙醫院不是好棒棒？憑什麼我們要協助他們醫療需求？」、時事評論員汪浩也指出「國民黨主席朱立倫竟要脅政府必須立即恢復小三通，協助中國人來搶食國內醫療資源。」如今，小三通尚未開放，台灣普拿疼就已經出現大量收購至中國的情況，朱立倫的言論值得大眾省思。</p>
+<p>2021 年開始中國陸續禁止台灣農產品，特別是到了 2022 年 12 月 8 日，無預警<strong>禁止了 178 項台灣水產品、後來加碼酒類、飲料禁止進口中國</strong>。就在中國「暫停」台灣水產品、飲料等輸入。值此同時，中國 12 月 7 日發布「<strong>新10條</strong>」解封，造成中國境內疫情的大爆發。12 月 13 日國民黨主席<strong>朱立倫</strong>表示，面對嚴峻中國疫情，呼籲<strong>開放小三通</strong>，協助中國獲取足夠醫藥，引起台灣一片譁然。<br></p>
+
+
+
+<p class="pqnote">當時就遭到醫師吳欣岱質疑「之前資訊戰方艙醫院不是好棒棒？憑什麼我們要協助他們醫療需求？」、時事評論員汪浩也指出「國民黨主席朱立倫竟要脅政府必須立即恢復小三通，協助中國人來搶食國內醫療資源。」如今，小三通尚未開放，台灣普拿疼就已經出現大量收購至中國的情況，朱立倫的言論值得大眾省思。</p>
 
 
 
