Update VOCUS 2022-12-22 patch

--- a/_posts/2022-12-22-VOCUS-legend-與-歷經-傳記-傳奇-人于傳奇-傳說-明說-略說-簡介-略簡圖-例圖-銘文-牢記文-字文鐫(鑄)彫-等橋接.html
+++ b/_posts/2022-12-22-VOCUS-legend-與-歷經-傳記-傳奇-人于傳奇-傳說-明說-略說-簡介-略簡圖-例圖-銘文-牢記文-字文鐫(鑄)彫-等橋接.html
@@ -36,14 +36,11 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legend =&nbsp;字乂鑄e聯d =&nbsp;字乂鑄ㄧdd =&nbsp;字乂鑄一點雕&nbsp;=&nbsp;字乂鑄一丶雕&nbsp;=&nbsp;字文鑄彫</span>，意通「文字刻鑄」，含概「刻鑄文字」、「彫鑄圖文」之類。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legend =&nbsp;錄記e聯點&nbsp;=&nbsp;錄記ee丶=&nbsp;錄記乂一丶=&nbsp;錄記文</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legend =&nbsp;錄誌e聯點&nbsp;=&nbsp;錄誌ee丶=&nbsp;錄誌乂一丶=&nbsp;錄誌文</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-2d3jj"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legendary：legend之；legend的；legend的似；legend樣似；legend樣容；legend的容樣；著名之</span>，此時 <span style="font-weight: bold; ">legendary =丨一者name.decadeㄧ連乙&nbsp;=&nbsp;十者名十丶連Z =&nbsp;著名之；著名的</span>。據說早期在&nbsp;English&nbsp;中，legendary&nbsp;一字是名詞，也和後來纔分化出來的名詞&nbsp;legendry&nbsp;意思相同，而不是像現在一樣的形容詞語意。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legendarily：legendary然；legendary哩；legendary地；legendary例樣；legendary容樣；legendary似；legendary似地</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legendry：legend聯一；legend聯；legend集</span>，此時字尾 <span style="font-weight: bold; ">-dry =&nbsp;隹Y =&nbsp;隹木&nbsp;=&nbsp;集</span>，也就是整個構字的過程中省了一個&nbsp;d；<span style="font-weight: bold; ">legend輯</span>；<span style="font-weight: bold; ">legend聚</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">legendize：legend之作；legend之作易；legend之轉易；legend之轉移；legend之化；legend之化意；legend化</span>。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/r1lST6mCdSA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/r1lST6mCdSA"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/r1lST6mCdSA" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/r1lST6mCdSA</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：The Score - Legend /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
