--- a/_posts/2022-12-21-INITIUM-儿挖金-不稳定-在非洲丧命-中非跨国掘金者暗流-一.html
+++ b/_posts/2022-12-21-INITIUM-儿挖金-不稳定-在非洲丧命-中非跨国掘金者暗流-一.html
@@ -18,7 +18,7 @@ author: 特约撰稿人谭威
 <p>“白发送黑头，真伤心。儿挖金，不稳定，在非洲丧命。我心惊，又怎么顶过这一辈子”——电影《夏至》</p>
 </blockquote>
 <p>2020年12月1日中非共和国当地时间12时30分，广西上林籍的淘金工人阿辉在位于雅诺凯（Yaloke）镇的矿区突发胃出血，送往医院抢救无效，不幸离世，年仅44岁。阿辉短暂的一生浓缩在一张简易的，由中非首都班吉圣布兰丁医院开具的死亡证明单上。死亡证明单上写著他的姓名、出生日期、死亡时间（2020年12月1日20时05分）、职业（矿业经理人）和死亡原因（胃出血与心肺震荡），证明单印著中非共和国外交和海外侨民部的印章和当地医院医师的签名。</p>
-<p>阿辉的遗体被放置在当地医院的太平间里，他的死亡还需要各种各样的证明：当地医院的医学鉴定、当地警局的死亡鉴定书、驻中非大使馆的死亡认证、中非共和国矿业协会的死亡通知……这些死亡的告示和确认的语言冰冷而精准，像是为这位来自中国南方籍籍无名的矿工所写的官方墓志铭。12月4日，阿辉的老板老覃总算拿到官方的死亡认证书，办理好了遗体火化的许可证。许可证上这样写著：伟，生于1975年，广西，男，于2020年12月1日班吉圣布兰丁医院休克后去世，尸体将于12月5日8点30分送往火化。</p>
+<p>阿辉的遗体被放置在当地医院的太平间里，他的死亡还需要各种各样的证明：当地医院的医学鉴定、当地警局的死亡鉴定书、驻中非大使馆的死亡认证、中非共和国矿业协会的死亡通知……这些死亡的告示和确认的语言冰冷而精准，像是为这位来自中国南方籍籍无名的矿工所写的官方墓志铭。12月4日，阿辉的老板老覃总算拿到官方的死亡认证书，办理好了遗体火化的许可证。许可证上这样写著：辉，生于1975年，广西，男，于2020年12月1日班吉圣布兰丁医院休克后去世，尸体将于12月5日8点30分送往火化。</p>
 <p>阿辉的遗体静静地躺在在粗壮的木材堆上，当地运尸工淋上汽油，点上一把火，要等上六七个小时，才能完成火化。阿辉的妻子和孩子因为旅途遥远和疫情爆发，不能陪他走完这人生最后一旅路。熊熊大火，发出滋滋的响声，陪在他身边是他矿区的几位工友和老板老覃。漫长的火化拉长了这备受煎熬的时刻。蹲在一旁的老覃沉默不语，一支接一支抽著苦闷的烟。在非洲淘金这些年，他亲眼目睹和见证太多工友的死亡：挨马啦痢（Malaria）死的同村发小、在工地上被当地劫匪乱枪打死的表叔、在去勘探矿区的路上遭遇车祸身亡的工人，去集镇卖金时被劫丧命的合伙人……都是老覃为他们处理身后事。</p>
 <p>老覃说挖金这一行挣的钱都是拿命搏出来的，黄金带著人血。他清楚地记得第一次是为一个感染疟疾，不治身亡的同村矿工处理后事，才36岁，年纪轻轻就在异国他乡送了命，由老覃负责送他的骨灰回国。那一天，因为大雾天，阿克拉的科托卡国际机场的航班大面积延误。晚上他与骨灰盒同处一室，挤在机场旁旅社一间狭窄的小屋里。那一夜他一直睁著双眼，开著灯，整夜未眠。他说不是因为害怕，而是有种劫后余生的感觉，他不敢想象如果骨灰盒里装的是自己的遗骸，他农村年迈的双亲和妻儿该如何度过余生。</p>
 <p>老覃为这个逝去的矿工单独买了一张机票，他的骨灰盒用书包包著，坐在老覃的旁边，靠窗的位置，这是他人生最后的一段路了，老覃说不想委屈他挤在行礼箱里。经过十九个小时的长途飞行，飞机终于落地，入境时却被海关人员拦了下来，怀疑骨灰盒里是非法的东西。老覃拿出一叠叠死亡证明材料、病例单和使馆证明反复解释后，才得以放行。他抱著骨灰盒连夜从上海虹桥机场飞回南宁，又驱车三个多小时，才终于到逝者的老家，天已经蒙蒙亮了。临近村口时，老覃摸了摸骨灰盒，心里默念道：“老表，回家咯！”。</p>
