--- a/_posts/2022-12-22-PQ-快沒哲了-柯承認找郭台銘討論虹案-郭回覆-加油.html
+++ b/_posts/2022-12-22-PQ-快沒哲了-柯承認找郭台銘討論虹案-郭回覆-加油.html
@@ -12,7 +12,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）.jpeg" alt="" class="wp-image-123534" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）-768x512.jpeg 768w" sizes="(max-width: 510px) 100vw, 510px" /><figcaption>柯文哲坦承有去找郭台銘討論如何解決「虹案」問題，但結論還是以加油、支持居多。（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）.jpeg" alt="" class="wp-image-123534" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/51df12db-郭台銘（圖／中央社）-768x512.jpeg 768w" sizes="(max-width: 510px) 100vw, 510px" /><figcaption>柯文哲坦承有去找郭台銘討論如何解決「虹案」問題，但結論還是以加油、支持居多。（圖／中央社）</figcaption></figure></div>
 
 
 
