--- a/_posts/2022-12-24-INITIUM-异乡人-原乡流浪-内心流亡.html
+++ b/_posts/2022-12-24-INITIUM-异乡人-原乡流浪-内心流亡.html
@@ -5,10 +5,10 @@ date: 2022-12-24 00:51:00.000000000 +00:00
 link: https://theinitium.com/article/20221224-strangers-hercountry-wanderer/
 categories: initium
 tags: blog
-author: 
+author: 殷予、其微、金云森
 ---
 
-<p>「在成长的土地上流浪是怎样的感觉？另外在怀念、不舍或无感中，我们如何看待未来的栖息地，还是否需要一个落脚之地？」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221224-strangers-hercountry-wanderer/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/e0bae7c160da49acbaa0acb6c9c67aa6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月7日，香港，天星小轮经过青马大桥。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「在成长的土地上流浪是怎样的感觉？另外在怀念、不舍或无感中，我们如何看待未来的栖息地，还是否需要一个落脚之地？」</p><p>殷予、其微、金云森</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221224-strangers-hercountry-wanderer/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/e0bae7c160da49acbaa0acb6c9c67aa6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月7日，香港，天星小轮经过青马大桥。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年10月7日，香港，天星小轮经过青马大桥。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><small>【编者按】：编辑过程中，编辑想起来是三位女性在讲自己的乡土和离散思考，其中一位还带有性别视角，因此决定把稿子也放入“女人没有国家？”专栏。<a href="https://theinitium.com/channel/her-country/">“女人没有国家？”</a>是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我们保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。</small></p>
 <p>2019年后的香港，和2020年后的大陆，都经过了历史上的分水岭。我们听到的一个问题变多了，你还要不要留在故土，要“去”还是要“留”？能思考这个问题，当然与人们的流动资本有关，但它也指向一个本质是，所谓“故乡”正在发生什么样的变化，让人开始思考这样的抉择？在成长的土地上流浪是怎样的感觉？另外在怀念、不舍或无感中，我们如何看待未来的栖息地，还是否需要一个落脚之地？</p>
 <h2>殷予，一直在流动</h2>
