--- a/_posts/2022-12-24-INMEDIA-專訪-在疫症與離散之年說香港故事-窄路微塵-導演林森-想給香港人一個擁抱.html
+++ b/_posts/2022-12-24-INMEDIA-專訪-在疫症與離散之年說香港故事-窄路微塵-導演林森-想給香港人一個擁抱.html
@@ -61,6 +61,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4zNCi0Mi54" title="窄路微塵_工作照_0041"><img src="https://live.staticflickr.com/65535/52583419096_ce9e7fce86_z.jpg" alt="窄路微塵_工作照_0041" /></a></p>
 <p>林森想要傳遞的說話，觀眾都感受得到。《窄路微塵》在香港正式上映前，曾入圍愛丁堡電影節和金馬影展，在英國、台灣放映，亦是香港亞洲電影節開幕電影。與觀眾見面，林森難忘不少港人分享被電影感動。</p>
 <p>「有種感覺就係，雖然呢兩三年我哋面對好多壓抑、好多彷徨、焦躁、不安嘅狀態，但你感覺到原來自己唔係孤單，原來大家都一齊喺度承受緊，大家一齊喺度攬住一齊死嘅狀態。」他說着笑了。</p>
+<p>外地觀眾雖然也會對疫情產生共鳴，但林森知道，他還是最想把電影送給香港人：「好希望畀當刻嘅香港人一個擁抱。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/g41YDW12m2" title="313115462_482199463951056_3414838649477767437_n"><img src="https://live.staticflickr.com/65535/52584035235_459fa4d9b5_z.jpg" alt="313115462_482199463951056_3414838649477767437_n" /></a><br /><em>《窄路微塵》於香港亞洲電影節首映，當時尚在英國的林森越洋進行映後談。這次回港親身接觸觀眾，他說感覺很不同，「因為可以好直接同香港觀眾溝通，好近距離，你會感受到大家睇時嘅感受。」（圖片來源：香港亞洲電影節）</em></p>
 <h3>不求改變世界 但求泛起漣漪</h3>
 <p>做訪問的時候，林森已經與家人移居英國半年。隔着螢幕，他不時行開照顧小孩，而他不諱言，離開的最大原因就是兩個兒子。疫情之下，公園圍封、學校停課，林森疫情前不久才出生的小兒子，出街沒戴口罩會緊張到哭。深信成長環境對孩子發展影響很大，他決定移民：「我唔想我嘅小朋友喺咁嘅環境下長大。」</p>
