--- a/_posts/2022-12-25-INMEDIA-國家衞健委今起不公布疫情信息-青島市昨爆出每日50萬人染疫.html
+++ b/_posts/2022-12-25-INMEDIA-國家衞健委今起不公布疫情信息-青島市昨爆出每日50萬人染疫.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/202212251_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>內地疫情未見頂，昨日山東省青島市、廣東省東莞市衞健委都公布推算感染數字，青島市推算每日新增約50萬人感染，及今日以10%增速增加。不過國家衞健委今早宣布，即日起不再發布每日疫情信息，即由中國疾控中心發布相關疫情信息，供參考和研究使用。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/g999eBWDq6" title="螢幕截圖 2022-12-25 上午10.33.08"><img src="https://live.staticflickr.com/65535/52584222106_febe080310_z.jpg" alt="螢幕截圖 2022-12-25 上午10.33.08" /></a></p>
-<p>打開中國疾控中心的網站，並沒有任何關於疫情數字的資料，外界無從得知今後內地的疫情。</p>
+<p>中國疾控中心的網站在下午更新，內地昨天新增2,940宗本土個案，無新增死亡個案。本土個案中，佔最多的是廣東省有1,348宗，其次是北京305宗。</p>
 <p>昨日的「最後通報」，青島市衞健委主任薄濤表示，全市目前每日新增49萬至53萬人染疫，今日及明日（24日及25日）會在此基礎上以10%增速增加，他估計青島正處於高峰來臨前的快速傳播階段，高峰期還未到。</p>
 <p>另外，東莞市衞健委昨日亦表示，市內每日以25萬至30萬人感染的幅度增長，而且增長速度愈來愈快，通告並記錄全市公立醫感染但仍然上班的醫護達2,528人。</p>
 </div></div></div>
