Update VOCUS 2022-12-25 patch

--- a/_posts/2022-12-23-VOCUS-ai-夢境檔案-入侵夢境的兇案推理.html
+++ b/_posts/2022-12-23-VOCUS-ai-夢境檔案-入侵夢境的兇案推理.html
@@ -52,4 +52,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">實際上是因為日文詞彙中「推理」、「本格」、「神秘」三個詞是混用的，故《AI：夢境檔案》其實應該是以懸疑神秘感為主的文字推理遊戲，原則上應該跟《流行之神》、《逆轉裁判》是同一個類別，不應跟《偵探神宮寺三郎》這種寫實系作比較。</div>
 <div class="draft-block draft--p left">但我認為遊戲某些部份的確是讓我無感，例如強迫觀看的歌舞秀，無關的對白和萬用的A書解決大法一次還可以，到最後氾濫使用A書梗，有趣都變成不有趣。</div>
 <div class="draft-block draft--p left">到了續作則是有事件無法連貫人物劇情的狀況，雖然最後符合懸疑劇本，但很多支線的串聯不如初代來的有整體是相當可惜的。但因為趣味性十足且遊戲性也很不錯，也許當成奇幻犯罪遊戲來看，能增加更多對遊戲的認同感。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/9dDIu1i3IGg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/9dDIu1i3IGg"></iframe></div>
